k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment
  namespace: ecommerce

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend-deployment

  template:
    metadata:
      labels:
        app: backend-deployment

    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: backend
          image: ghcr.io/hzdevops52/e-backend:test

          ports:
            - name: http
              containerPort: 5000
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
