k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mongodb
  namespace: ecommerce

spec:
  selector:
    matchLabels:
      app: mongodb

  serviceName: mongodb-service

  replicas: 1

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
        - name: mongodb
          image: mongo:6

          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongodb
              mountPath: /data/db

      volumes:
        - name: mongodb
          persistentVolumeClaim:
            claimName: mongodb-pvc
