k8s/backend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: ecommerce

spec:
  type: ClusterIP
  selector:
    app: backend-deployment

  ports:
    - port: 5000
      targetPort: 5000
