k8s/frontend-service.yml
apiVersion: v1 
kind: Service

metadata:
  name: frontend-service
  namespace: ecommerce

spec:
  type: NodePort
  selector:
    app: frontend-deployment

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
